2007-05-06  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gtk.defs (lookup, get_name): Fix GtkIconSize
	methods to be functions (longstanding bug).
	(gtk_cell_renderer_get_size, gtk_tree_view_column_cell_get_size):
	Ignore these two, because with the out arguments fix in GLib, they
	provoke another bug in G-Wrap. Will have to wait for RTI out
	arguments to re-enable.

2007-05-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gdk-spec.scm (initialize): The glib wrapset declares
	the type rules we need, remove ours.

2007-05-04  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gtk.defs (add_actions, add_toggle_actions)
	(add_radio_actions, gtk_list_store_new, set_value)
	(gtk_message_dialog_new, gtk_stock_add, gtk_stock_lookup)
	(set_text, insert, insert_at_cursor, insert_interactive)
	(insert_interactive_at_cursor, insert_with_tags)
	(insert_with_tags_by_name, get_bounds, get_selection_bounds)
	(get_value, get_selected, gtk_tree_store_new, set_value)
	(set_cell_data_func): 
	* gnome/overrides/gdk.defs (gdk-event->event-struct): 
	* gnome/overrides/gdk-pixbuf.defs (gdk_pixbuf_save_to_port): Don't
	leave guile mode for functions that take or return SCM values.

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.90 ==

2006-11-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gtk-spec.scm: Use (gnome gw support g-wrap), the
	g-wrap compatibility wrapper.

	* gnome/gw/gdk-spec.scm: Use (gnome gw support g-wrap), the g-wrap
	compatibility wrapper.

2005-10-14  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gtk.defs: Don't ignore gtk_list_*, that catches
	the list store too; instead ignore each one of the gtk_list
	functions. 

2005-09-17  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/gtk-support.c (_gtk_selection_data_get_as_string): Fix
	GCC 4.0 warnings.

2005-04-11  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/gdk-support.c (gdk_event_to_vector): Fix compiler
	warnings on alpha.
